2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg/jpeg-data.c: Fix #1054322.

2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Fix #1051994.

2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Marked some strings for translation. Fix #803191.

2005-03-13  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Update also e->components

2005-03-13  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-data.c: critical fix of 2005-03-09 change: saving
	  IFD containing data of odd length was causing memory corruption
	  and total lost of entire EXIF data

2005-03-13  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* NEWS: Release 0.6.12

2005-03-12  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* po/de.po: Partial translation update

2005-03-11  Lutz Mueller <lutz@users.sourceforge.net>

	Spotted by Jan Patera <patera@users.sourceforge.net>:

	* test/test-mem.c: Small fix.

2005-03-10  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-utils.*,exif-entry.c: Full support of EXIF_FORMAT_SSHORT
	  (used by Nikon & Olympus mnote tags)

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-utils.c (exif_array_set_byte_order): Return if an invalid
	  format is supplied.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Update e->size.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_save_data_content): Update comment that
	  this code does not honor the specification yet.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_save_data_content): Save entries in
	  the correct order.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>

	* test/test-mem.c: Write size to loader to make the test work again.

2005-03-09  Lutz Mueller <lutz@users.sourceforge.net>
